2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2006-11-19 Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * added missing "package provide" statement
        * corrected mistake in plaintext, for text with given width/height
        * corrected handling of lines

2006-07-07 Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * initial checkin of the Diagrams package
        * fixed several outstanding bugs
        * started with documentation

	* New module 'diagrams', by Arjen Markus.
